--- a/.gitignore
+++ b/.gitignore
@@ -16,27 +16,25 @@ lib64/
 parts/
 sdist/
 var/
+wheels/
 *.egg-info/
 .installed.cfg
 *.egg
-venv/
-.env
 
-# Node
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.env.local
-.env.*.local
+# Virtual Environment
+.env
+.venv
+venv/
+ENV/
 
 # IDE
 .idea/
 .vscode/
 *.swp
 *.swo
-.DS_Store
 
 # Project specific
-backend/notebooks/*
-!backend/notebooks/.gitkeep 
+backend/export/
+backend/logs/
+notebooks/*.ipynb
+!notebooks/example.ipynb 
