--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,9 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
     "@fortawesome/fontawesome-free": "^6.0.0",
     "core-js": "^3.8.3",
     "dompurify": "^3.0.6",
+    "element-plus": "^2.9.3",
     "github-markdown-css": "^5.4.0",
     "marked": "^9.1.5",
     "monaco-editor": "^0.44.0",
