--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
     "@fortawesome/fontawesome-free": "^6.0.0",
+    "axios": "^1.7.9",
     "core-js": "^3.8.3",
     "dompurify": "^3.0.6",
     "element-plus": "^2.9.3",
