--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "clean": "rm -rf dist && rm -rf .cache",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
@@ -18,6 +19,7 @@
     "marked": "^9.1.5",
     "monaco-editor": "^0.44.0",
     "monaco-editor-webpack-plugin": "^7.1.0",
+    "pinia": "^3.0.1",
     "uuid": "^9.0.0",
     "vue": "^3.2.13"
   },
@@ -29,6 +31,8 @@
     "@vue/cli-service": "~5.0.0",
     "@vue/compiler-sfc": "^3.2.13",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "sass": "^1.85.0",
+    "sass-loader": "^10.5.2"
   }
 }
